--- a/_posts/2014-03-20-testing.md
+++ b/_posts/2014-03-20-testing.md
@@ -9,4 +9,4 @@ share: true
 ## A New Post
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
-![dashboard-4.jpg](/images/dashboard-4.jpg)
+<figure>![dashboard-4.jpg](/images/dashboard-4.jpg)</figure>
